Fixed the issue where the post area was overlapping the footer.
Fixed the issue where the post area was overlapping the footer.

--- a/react/src/styles/community.css
+++ b/react/src/styles/community.css
@@ -28,6 +28,8 @@
   height: 1000px;
   justify-content: space-evenly;
   align-items: center;
+  overflow-y: auto;
+  max-height: 250vh;
 }
 
 .post-content {
